phone + nav + flex elements to index

--- a/index.html
+++ b/index.html
@@ -2,10 +2,25 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-<link rel="stylesheet" href="css/style.css">
-    <title></title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>KlubKlub App</title>
   </head>
-  <body>
-
+<body>
+  <div class="phone">
+    <div class="app-container">
+      <div class="app">
+        <div class="nav">
+        </div>
+        <div class="app-content">
+          <div class="nyheder-element"></div>
+          <div class="nyheder-element"></div>
+          <div class="nyheder-element"></div>
+          <div class="nyheder-element"></div>
+          <div class="nyheder-element"></div>
+          <div class="nyheder-element"></div>
+        </div>
+      </div>
+    </div>
+  </div>
   </body>
-</html>
+  </html>
