65% phone + fixed menu + nav elements

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <div class="app-container">
       <div class="app">
         <div class="nav">
+          <a class="burger-icon" href="">
+            <img src="media/burger.png" alt="">
+          </a>
+          <div class="nav-title">
+            <h1>NYHEDER</h1>
+          </div>
+          <a class="kurv-icon" href="">
+            <img src="media/kurv.png" alt="">
+          </a>
         </div>
         <div class="app-content">
           <div class="nyheder-element"></div>
