nyheder content + links

--- a/index.html
+++ b/index.html
@@ -14,19 +14,37 @@
             <img src="media/burger.png" alt="">
           </a>
           <div class="nav-title">
-            <h1>NYHEDER</h1>
+            <h1>nyheder</h1>
           </div>
           <a class="kurv-icon" href="">
             <img src="media/kurv.png" alt="">
           </a>
         </div>
         <div class="app-content">
-          <div class="nyheder-element"></div>
-          <div class="nyheder-element"></div>
-          <div class="nyheder-element"></div>
-          <div class="nyheder-element"></div>
-          <div class="nyheder-element"></div>
-          <div class="nyheder-element"></div>
+          <a href=""><div class="nyheder-element"><h2>spil</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>shop</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>klubpoint</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>dagens afstemning</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>min konto</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>favoritter</h2></div></a>
+          <div class="nyheder-title">
+            <h2>nyheder</h2>
+            <div class="nyhed">
+              <img class="blog-img" src="media/blog1.png" alt="">
+              <h3>4 SIMPLE TRIN TIL SMUK HUD</h3>
+              <p>Har du endnu ikke din helt egen plejerutine? Fint ud af hvordan du bør pleje huden både morgen og aften.</p>
+            </div>
+            <div class="nyhed">
+              <img class="blog-img" src="media/blog2.png" alt="">
+              <h3>få et sundt og langt hår!</h3>
+              <p>Gør håret stærkt, langt, smukt og modstandsdygtigt med Olaplex og Sugarbearhair.</p>
+            </div>
+            <div class="nyhed">
+              <img class="blog-img" src="media/blog3.png" alt="">
+              <h3>sådan bruger du argan</h3>
+              <p>Brug argan olie til hår, hud og neglepleje. Læs mere og få inspiration til hud, hår og neglepleje.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
