--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/animation.js"></script>
     <title>KlubKlub App</title>
   </head>
 <body>
   <div class="phone">
-    <div class="app-container">
+    <div class="app-container fade">
       <div class="app">
         <div class="nav">
           <a class="burger-icon" href="">
@@ -24,7 +26,7 @@
           <a href=""><div class="nyheder-element"><h2>spil</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>shop</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>klubpoint</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>dagens afstemning</h2></div></a>
+          <a href="afstemning.html"><div class="nyheder-element"><h2>afstemning</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>min konto</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>favoritter</h2></div></a>
           <div class="nyheder-title">
