--- a/afstemning.html
+++ b/afstemning.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/afstemning.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/animation.js"></script>
+    <script src="js/animation.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
   </head>
 <body>
