--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/animation.js"></script>
+    <script src="js/animation.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
   </head>
 <body>
