afstemning content test

--- a/afstemning.html
+++ b/afstemning.html
@@ -14,11 +14,38 @@
       <div class="app">
         <div class="vote-container">
           <div class="vote-content">
-          <a class="back-icon" href="index.html">
-            <img src="media/back.png" alt="">
-          </a>
-          <h3>afgiv din stemme</h3>
-          <h2>HVILKEN PRODUKTKATEGORI ØNSKER DU, FÅR ET STØRRE UDVALG?</h2>
+            <a class="back-icon" href="index.html">
+              <img src="media/back.png" alt="">
+            </a>
+            <h3>afgiv din stemme</h3>
+            <h2>HVILKEN PRODUKTKATEGORI SKAL HAVE ET STØRRE UDVALG?</h2>
+            <div class="vote-options">
+              <a href="">
+                <div class="vote-option">
+                  <img class="vote-img" src="media/vote1.png" alt="">
+                  <h3>barbering</h3>
+                </div>
+              </a>
+              <a href="">
+                <div class="vote-option">
+                  <img class="vote-img" src="media/vote2.png" alt="">
+                  <h3>spray tan</h3>
+                </div>
+              </a>
+              <a href="">
+                <div class="vote-option">
+                  <img class="vote-img" src="media/vote3.png" alt="">
+                  <h3>negle</h3>
+                </div>
+              </a>
+              <a href="">
+                <div class="vote-option">
+                  <img class="vote-img" src="media/vote4.png" alt="">
+                  <h3>helsekost</h3>
+                </div>
+              </a>
+            </div>
+            <h4>er der ET BESTEMT BRAND DU KUNNE TÆNKE DIG?<br>SEND OS ET TIP</h4>
           </div>
         </div>
       </div>
