--- a/afstemning.html
+++ b/afstemning.html
@@ -5,12 +5,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/afstemning.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/animation.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
   </head>
 <body>
   <div class="phone">
-    <div class="app-container fade">
+    <div class="app-container">
       <div class="app">
         <div class="vote-container">
           <div class="vote-content">
