--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/style.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/animation.js" type="text/javascript"></script>
+    <script src="js/script.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
   </head>
 <body>
   <div class="phone">
-    <div class="app-container fade">
+    <div class="app-container">
       <div class="app">
         <div class="nav">
-          <a class="burger-icon" href="">
+          <a class="burger-icon" href="menu.html">
             <img src="media/burger.png" alt="">
           </a>
           <div class="nav-title">
