afstemning js + tak

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <div class="phone">
-    <div class="app-container">
+    <div class="app-container fade">
       <div class="app">
         <div class="nav">
           <a class="burger-icon" href="menu.html">
@@ -23,12 +23,12 @@
           </a>
         </div>
         <div class="app-content">
-          <a href=""><div class="nyheder-element"><h2>spil</h2></div></a>
+          <a href="afstemning.html"><div class="nyheder-element"><h2>dagens afstemning</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>spil & vind</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>shop</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>klubpoint</h2></div></a>
-          <a href="afstemning.html"><div class="nyheder-element"><h2>afstemning</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>min konto</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>favoritter</h2></div></a>
+          <a href=""><div class="nyheder-element"><h2>min konto</h2></div></a>
           <div class="nyheder-title">
             <h2>nyheder</h2>
             <div class="nyhed">
