--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
   </head>
 <body>
   <div class="phone">
-    <div class="app-container">
+    <div class="app-container fade">
       <div class="app">
         <div class="nav no-shadow">
           <a class="burger-icon" href="index.html">
