--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div class="app-content">
           <a href="afstemning.html"><div class="nyheder-element"><h2>dagens afstemning</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>spil & vind</h2></div></a>
+          <a href="spil.html"><div class="nyheder-element"><h2>spil & vind</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>shop</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>klubpoint</h2></div></a>
           <a href=""><div class="nyheder-element"><h2>favoritter</h2></div></a>
