--- a/spil.html
+++ b/spil.html
@@ -19,9 +19,17 @@
               <img src="media/back.png" alt="">
             </a>
             <h2>fang en pakke og se om du er heldig</h2>
-            <div class="game">
 
+            <div class="game">
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
             </div>
+
           </div>
         </div>
       </div>
