spil-pakke structure

--- a/spil-pakke.html
+++ b/spil-pakke.html
@@ -16,10 +16,8 @@
         <div class="game-container">
           <div class="game-content">
 
-            <div class="game">
-              <a href="#" onclick="randomSite();" class="gift"><img src="media/gift.png" alt=""></a>
-
-            </div>
+            <h2>klik på pakken for at åbne den</h2>
+              <a href="#" onclick="randomSite();"><img src="media/gift.png" alt=""></a>
 
           </div>
         </div>
