spil-pakke animate test

--- a/spil-pakke.html
+++ b/spil-pakke.html
@@ -13,12 +13,14 @@
   <div class="phone">
     <div class="app-container fade">
       <div class="app">
-        <div class="game-container">
+        <div class="game-container dark-bg">
           <div class="game-content">
 
-            <h2>klik på pakken for at åbne den</h2>
-              <a href="#" onclick="randomSite();"><img src="media/gift.png" alt=""></a>
+            <div class="gift-selected">
 
+            <h2>klik på pakken for at åbne den</h2>
+              <a href="#" onclick="randomSite();"><img src="media/gift-white.png" id="opengift" alt=""></a>
+            </div>
           </div>
         </div>
       </div>
