gift rain animation

--- a/spil.html
+++ b/spil.html
@@ -18,16 +18,21 @@
             <a class="back-icon" href="index.html">
               <img src="media/back.png" alt="">
             </a>
-            <h2>fang en pakke og se om du er heldig</h2>
+            <div class="game-top">
+              <h2>fang en pakke og se om du er heldig</h2>
+            </div>
+
+
 
             <div class="game">
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-blue.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-green.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-blue.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-green.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-red.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-blue.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-green.png" alt=""></a>
+              <a href="spil-pakke.html" class="gift"><img src="media/gift-red.png" alt=""></a>
             </div>
 
           </div>
