Fixed scrollbars, centered app on page

--- a/spil.html
+++ b/spil.html
@@ -19,7 +19,7 @@
               <img src="media/back.png" alt="">
             </a>
             <div class="game-top">
-              <h2>fang en pakke og se om du er heldig</h2>
+              <h2>Fang en pakke <br />og se om du er heldig</h2>
             </div>
 
             <div class="game">
