Spil: Fixed gift overflow, gift start position, header text

--- a/spil-pakke.html
+++ b/spil-pakke.html
@@ -18,7 +18,7 @@
 
             <div class="gift-selected">
 
-            <h2>klik på pakken for at åbne den</h2>
+            <h2>Åbn pakken</h2>
               <a href="#" onclick="randomSite();"><img src="media/gift-white.png" id="opengift" alt=""></a>
             </div>
           </div>
