--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
           </a>
         </div>
         <div class="app-content">
-          <a href="afstemning.html"><div class="nyheder-element"><h2>dagens afstemning</h2></div></a>
-          <a href="spil.html"><div class="nyheder-element"><h2>spil & vind</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>shop</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>klubpoint</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>favoritter</h2></div></a>
-          <a href=""><div class="nyheder-element"><h2>min konto</h2></div></a>
+          <a href="afstemning.html"><div class="forside-element"><div class="img-title"><img src="media/afstemning.png"><h3>afstemninger</h3></div></div></a>
+          <a href="spil.html"><div class="forside-element"><div class="img-title"><img src="media/spil-og-vind.png"><h3>spil & vind</h3></div></div></a>
+          <a href=""><div class="forside-element"><div class="img-title"><img src="media/shop.png"><h3>shop</h3></div></div></a>
+          <a href=""><div class="forside-element"><div class="img-title"><img src="media/klubpoint.png"><h3>klubpoint</h3></div></div></a>
+          <a href=""><div class="forside-element"><div class="img-title"><img src="media/favoritter.png"><h3>favoritter</h3></div></div></a>
+          <a href=""><div class="forside-element"><div class="img-title"><img src="media/min-konto.png"><h3>min konto</h3></div></div></a>
           <div class="nyheder-title">
             <h2>nyheder</h2>
             <div class="nyhed">
