--- a/menu.html
+++ b/menu.html
@@ -23,12 +23,12 @@
           <img class="menu-logo" src="media/logo.png" alt="">
           <div class="menu-items">
             <a href="index.html"><h3>nyheder</h3></a>
-            <a href="spil.html"><h3>spil</h3></a>
+            <a href="afstemning.html"><h3>afstemninger</h3></a>
+            <a href="spil.html"><h3>spil & vind</h3></a>
             <a href=""><h3>shop</h3></a>
             <a href=""><h3>klubpoint</h3></a>
-            <a href="afstemning.html"><h3>afstemning</h3></a>
-            <a href=""><h3>min konto</h3></a>
             <a href=""><h3>favoritter</h3></a>
+            <a href=""><h3>min konto</h3></a>
             <a href=""><h3>log ud</h3></a>
           </div>
         </div>
