--- a/gift1.html
+++ b/gift1.html
@@ -16,8 +16,8 @@
         <div class="game-container green-bg">
           <div class="game-content">
 
-            <div class="gift-selected">
-
+            <div class="gift-container">
+              
               <h2>Tillykke! du har vundet</h2>
               <h3>76% rabat på Sibel Stick Up Roll'ing voksvarmer med sugekop</h3>
               <div class="product-spotlight-circle">
