--- a/spil.html
+++ b/spil.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/spil.css">
     <link rel="stylesheet" href="css/afstemning.css">
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
     <script src="js/script.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
   </head>
@@ -23,14 +24,14 @@
             </div>
 
             <div class="game">
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-blue.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-green.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-blue.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-green.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-red.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-blue.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-green.png" alt=""></a>
-              <a href="spil-pakke.html" class="gift"><img src="media/gift-red.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-blue.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-green.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-blue.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-green.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-red.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-blue.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-green.png" alt=""></a>
+              <a class="gift" onclick="grabGift();"><img src="media/gift-red.png" alt=""></a>
             </div>
 
           </div>
