--- a/gift1.html
+++ b/gift1.html
@@ -23,7 +23,7 @@
               <div class="product-spotlight-circle">
               <img src="media/products/sibel-voks_small.jpg" />
               </div>
-              <div class="btn"><a href=""><h2>Haps tilbuddet</h2></a></div>
+              <div class="btn"><a href="cart.html"><h2>Haps tilbuddet</h2></a></div>
             </div>
           </div>
         </div>
