Ændret struktur i afstemning
sider tilføjet, ny copy tilføjet og navne på html ændret

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </a>
         </div>
         <div class="app-content">
-          <a href="afstemning.html"><div class="forside-element"><div class="img-title"><img src="media/afstemning.png"><h3>afstemninger</h3></div></div></a>
+          <a href="afstemninger.html"><div class="forside-element"><div class="img-title"><img src="media/afstemning.png"><h3>afstemninger</h3></div></div></a>
           <a href="spil.html"><div class="forside-element"><div class="img-title"><img src="media/spil-og-vind.png"><h3>spil & vind</h3></div></div></a>
           <a href=""><div class="forside-element"><div class="img-title"><img src="media/shop.png"><h3>shop</h3></div></div></a>
           <a href=""><div class="forside-element"><div class="img-title"><img src="media/klubpoint.png"><h3>klubpoint</h3></div></div></a>
