--- a/klubafstemning.html
+++ b/klubafstemning.html
@@ -36,7 +36,7 @@
                 <h3>helsekost</h3>
               </div>
             </div>
-            <div class="btn"><a href="afstemning-tak.html"><h2>Indsend svar</h2></a></div>
+            <div class="btn"><a href="klubafstemning-tak.html"><h2>Indsend svar</h2></a></div>
           </div>
         </div>
       </div>
