--- a/gift1.html
+++ b/gift1.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spil.css">
     <link rel="stylesheet" href="css/afstemning.css">
+    <link rel="shortcut icon" type="image/png" href="media/favicon.png"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
@@ -17,7 +18,7 @@
           <div class="game-content">
 
             <div class="gift-container">
-              
+
               <h2>Tillykke! du har vundet</h2>
               <h3>76% rabat på Sibel Stick Up Roll'ing voksvarmer med sugekop</h3>
               <div class="product-spotlight-circle">
