--- a/spil.html
+++ b/spil.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/spil.css">
     <link rel="stylesheet" href="css/afstemning.css">
+    <link rel="shortcut icon" type="image/png" href="media/favicon.png"/>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src='https://cdn.rawgit.com/admsev/jquery-play-sound/master/jquery.playSound.js'></script>
     <script src="js/script.js" type="text/javascript"></script>
