--- a/tilbudsafstemning.html
+++ b/tilbudsafstemning.html
@@ -15,7 +15,7 @@
       <div class="app">
         <div class="vote-container">
           <div class="vote-content">
-            <a class="back-icon" href="index.html">
+            <a class="back-icon" href="afstemninger.html">
               <img src="media/back.png" alt="">
             </a>
             <h2>Hvilket af disse produkter skal der være 40% på i morgen?</h2>
