--- a/afstemninger.html
+++ b/afstemninger.html
@@ -18,7 +18,7 @@
             <a class="back-icon" href="index.html">
               <img src="media/back.png" alt="">
             </a>
-            <h1>AFSTEMNINGER</h1>
+            <h1 class="white-text">AFSTEMNINGER</h1>
             <div class="app-content">
               <a href="tilbudsafstemning.html"><div class="forside-element"><div class="img-title"><img src="media/klubpoint.png"><h3>Tilbudsafstemning</h3></div></div></a>
               <a href="klubafstemning.html"><div class="forside-element"><div class="img-title"><img src="media/shop.png"><h3>Klubafstemning</h3></div></div></a>
