--- a/afstemninger.html
+++ b/afstemninger.html
@@ -19,9 +19,9 @@
               <img src="media/back.png" alt="">
             </a>
             <h1 class="white-text">AFSTEMNINGER</h1>
-            <div class="app-content">
-              <a href="tilbudsafstemning.html"><div class="forside-element"><div class="img-title"><img src="media/klubpoint.png"><h3>Tilbudsafstemning</h3></div></div></a>
-              <a href="klubafstemning.html"><div class="forside-element"><div class="img-title"><img src="media/shop.png"><h3>Klubafstemning</h3></div></div></a>
+            <div class="app-content voting">
+              <a href="tilbudsafstemning.html"><div class="forside-element-afstemning"><div class="img-title"><img src="media/klubpoint.png"><h3>Tilbudsafstemning</h3></div></div></a>
+              <a href="klubafstemning.html"><div class="forside-element-afstemning"><div class="img-title"><img src="media/shop.png"><h3>Klubafstemning</h3></div></div></a>
             </div>
 
           </div>
