--- a/tilbudsafstemning.html
+++ b/tilbudsafstemning.html
@@ -21,12 +21,12 @@
             <h2>Hvilket af disse produkter skal der være 40% på i morgen?</h2>
             <div class="vote-options">
               <div class="vote-option" id="vote1">
-                <img class="vote-img" src="media/vote1.png" alt="">
+                <img class="vote-img" src="media/vote1.png" alt=""><h3>Barbering</h3>
                 <p>Giv dit udseende et friskt pust med NYX High Voltage Lipstick Flutter Kisses. Denne smukke nude-brune læbestift med et pift af en pink tone dufter dejligt af vanilje og føles behagelig af have på. Dens cremet konsistens gør, at den er utrolig let
 af påføre og får en naturlig skinnende finish.</p>
               </div>
               <div class="vote-option">
-                <img class="vote-img" src="media/vote2.png" alt="">
+                <img class="vote-img" src="media/vote2.png" alt=""><h3>Barbering</h3>
                 <p>Lækre gummies med smag af solbær, specielt designet med essentielle næringsstoffer, som styrker og vedligeholder håret. HAIR Vitamins indeholder bl.a. biotin og zink som bidrager til at vedligeholde håret. Samt acerola
 (indeholder vitamin C) og folsyre.</p>
               </div>
