--- a/tilbudsafstemning-tak.html
+++ b/tilbudsafstemning-tak.html
@@ -20,9 +20,9 @@
             </a>
             <div class="tak-center">
               <img src="media/tak_flueben.png" class="takimg">
-              <h2>TAK FORDI DU STEMTE! KOM TILBAGE I MORGEN</h2>
-              <h2>VI ANNONCERER RESULTATET HVER FREDAG KL. 12</h2>
-              <h3>ET BESTEMT BRAND DU KUNNE TÆNKE DIG? <a href=""><b>SEND OS ET TIP</b></a></h3>
+              <h2>TAK FORDI DU STEMTE!<br> KOM TILBAGE I MORGEN</h2>
+              <h2>VI ANNONCERER RESULTATET<br> HVER FREDAG KL. 12</h2>
+              <h3>ET BESTEMT BRAND DU KUNNE TÆNKE DIG? <a href=""><b>send os et tip med #tiptip</b></a></h3>
             </div>
           </div>
         </div>
