--- a/klubafstemning-tak.html
+++ b/klubafstemning-tak.html
@@ -13,16 +13,17 @@
   <div class="phone">
     <div class="app-container fade">
       <div class="app">
-        <div class="vote-container">
-          <div class="vote-content">
+        <div class="vote-container tak">
+          <div class="vote-content tak">
             <a class="back-icon" href="index.html">
               <img src="media/back.png" alt="">
             </a>
-            <h2>tak for din stemme!</h2>
-            <h4>kom tilbage igen i morgen og stem</h4>
-            <h4>har du et bestemt produkt eller mærke i tankerne? Så er du meget velkommen til at kontakte os. Send os et tip her.</h4>
-            <div class="btn"><a href="index.html"><h2>okay dokay</h2></a></div>
-            <h4>ikke designet side endnu</h4>
+            <div class="tak-center">
+              <img src="media/ta_hjerte.png" class="takimg">
+              <h2>DU ER MED TIL AT GØRE EN <br> FORSKEL I DIN KLUB!</h2>
+              <h2>VI ANNONCERER RESULTATET <br> D. 31/02/2019</h2>
+              <h3>ET BESTEMT BRAND DU KUNNE TÆNKE DIG? <a href=""><b>SEND OS ET TIP</b></a></h3>
+            </div>
           </div>
         </div>
       </div>
