gift1.html done

--- a/gift1.html
+++ b/gift1.html
@@ -18,14 +18,18 @@
           <div class="game-content">
 
             <div class="gift-container">
-
+              <img src="media/mini-gift.png"/>
               <h2>Tillykke! du har vundet</h2>
               <h3>76% rabat på Sibel Stick Up Roll'ing voksvarmer med sugekop</h3>
-              <div class="product-spotlight-circle">
-              <img src="media/products/sibel-voks_small.jpg" />
+              <div class="rabat-spot"> <h2>76%</h2>
+
               </div>
-              <div class="btn"><a href="cart.html"><h2>Haps tilbuddet</h2></a></div>
+              <div class="product-spotlight-circle">
+              <img src="media/products/sibel-voks_small.jpg"/>
+              </div>
             </div>
+              <div class="btn"><a href="cart.html"><h2>Haps tilbuddet</h2></a></div>
+              <p>*DU VIL IKKE OPTJENE KLUBPOINT VED BENYTTELSEN AF DETTE TILBUD.</p>
           </div>
         </div>
       </div>
