--- a/nogift.html
+++ b/nogift.html
@@ -19,20 +19,14 @@
             <a class="back-icon" href="index.html">
               <img src="media/back.png" alt="">
             </a>
-
             <div class="gift-container">
               <img src="media/mini-gift.png"/>
-              <h2>Tillykke! du har vundet</h2>
-              <h3>64% rabat på OROFLUIDO ASIA ZEN CONTROL SHAMPOO</h3>
-              <div class="rabat-spot"> <h2>64%</h2>
-
-              </div>
-              <div class="product-spotlight-circle">
-              <img src="media/products/orofluido-shampoo_small.jpg"/>
-              </div>
+              <h2>øv altså!</h2>
+              <h3>DU VANDT DEVÆRRE IKKE NOGET I DAG. PRØV IGEN I MORGEN!</h3>
+              <div class="product-spotlight-circle"> <h2>pakken er tom</h2> </div>
+              <div class="mini-spotlight"><img src="media/products/australian-gold-solcreme_small.jpg"/></div>
+              <div class="mini-spotlight"><img src="media/products/everneed-monique_small.jpg"/></div>
             </div>
-              <div class="btn"><a href="cart.html"><h2>Haps tilbuddet</h2></a></div>
-              <p>*DU VIL IKKE OPTJENE KLUBPOINT VED BENYTTELSEN AF DETTE TILBUD.</p>
           </div>
         </div>
       </div>
