--- a/gift2.html
+++ b/gift2.html
@@ -16,6 +16,9 @@
       <div class="app">
         <div class="game-container green-bg">
           <div class="game-content">
+            <a class="back-icon" href="index.html">
+              <img src="media/back.png" alt="">
+            </a>
 
             <div class="gift-container">
               <img src="media/mini-gift.png"/>
