spelling + greygren-bg

--- a/nogift.html
+++ b/nogift.html
@@ -14,7 +14,7 @@
   <div class="phone">
     <div class="app-container fade">
       <div class="app">
-        <div class="game-container green-bg">
+        <div class="game-container greygreen-bg">
           <div class="game-content">
             <a class="back-icon" href="index.html">
               <img src="media/back.png" alt="">
@@ -22,7 +22,7 @@
             <div class="gift-container">
               <img src="media/mini-gift.png"/>
               <h2>øv altså!</h2>
-              <h3>DU VANDT DEVÆRRE IKKE NOGET I DAG. PRØV IGEN I MORGEN!</h3>
+              <h3>DU VANDT DEsVÆRRE IKKE NOGET I DAG. PRØV IGEN I MORGEN!</h3>
               <div class="product-spotlight-circle"> <h2>pakken er tom</h2> </div>
               <div class="mini-spotlight"><img src="media/products/australian-gold-solcreme_small.jpg"/></div>
               <div class="mini-spotlight"><img src="media/products/everneed-monique_small.jpg"/></div>
