Halp center hart pls

--- a/klubafstemning-tak.html
+++ b/klubafstemning-tak.html
@@ -18,11 +18,12 @@
             <a class="back-icon" href="index.html">
               <img src="media/back.png" alt="">
             </a>
-            <div class="tak-center">
-              <img src="media/ta_hjerte.png" class="takimg">
+            <div class="tak center tak-center-klub">
               <h2>DU ER MED TIL AT GØRE EN <br> FORSKEL I DIN KLUB!</h2>
               <h2>VI ANNONCERER RESULTATET <br> D. 31/02/2019</h2>
-              <h3>ET BESTEMT BRAND DU KUNNE TÆNKE DIG? <a href=""><b>SEND OS ET TIP</b></a></h3>
+            </div>
+            <div class="tak-center">
+            <h3>ET BESTEMT BRAND DU KUNNE TÆNKE DIG? <a href=""><b>SEND OS ET TIP</b></a></h3>
             </div>
           </div>
         </div>
