--- a/spil-pakke.html
+++ b/spil-pakke.html
@@ -19,6 +19,7 @@
           <div class="game-content">
 
             <div class="gift-selected">
+              <h2>åbn pakken med et klik</h2>
               <a onclick="randomSite()"><img src="media/gift-white.png" id="opengift" alt=""></a>
             </div>
           </div>
