text and heart fix

--- a/klubafstemning-tak.html
+++ b/klubafstemning-tak.html
@@ -19,7 +19,7 @@
               <img src="media/back.png" alt="">
             </a>
             <div class="tak center tak-center-klub">
-              <h2>DU ER MED TIL AT GØRE EN <br> FORSKEL I DIN KLUB!</h2>
+              <h2>DU ER MED TIL AT GØRE EN FORSKEL I DIN KLUB!</h2>
               <h2>VI ANNONCERER RESULTATET <br> D. 31/02/2019</h2>
             </div>
             <div class="tak-center">
