cart.html deleted

--- a/gift2.html
+++ b/gift2.html
@@ -28,7 +28,7 @@
               <img src="media/25rabat.png" class="rabat"/>
               </div>
             </div>
-              <div class="btn"><a href="cart.html"><h2>snup rabatkupon</h2></a></div>
+              <div class="btn"><a href=""><h2>snup rabatkupon</h2></a></div>
               <p>*FOR AT AKTIVERE RABATKUPONEN SKAL DU MINIMUM KØBE FOR 200 KR.</p>
           </div>
         </div>
