--- a/gift3.html
+++ b/gift3.html
@@ -31,7 +31,7 @@
               <img src="media/products/orofluido-shampoo_small.jpg"/>
               </div>
             </div>
-              <div class="btn"><a href="cart.html"><h2>Haps tilbuddet</h2></a></div>
+              <div class="btn"><a href=""><h2>Haps tilbuddet</h2></a></div>
               <p>*DU VIL IKKE OPTJENE KLUBPOINT VED BENYTTELSEN AF DETTE TILBUD.</p>
           </div>
         </div>
