--- a/gift2.html
+++ b/gift2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/spil.css">
     <link rel="stylesheet" href="css/afstemning.css">
     <link rel="shortcut icon" type="image/png" href="media/favicon.png"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
     <title>KlubKlub App</title>
   </head>
